--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,7 +32,7 @@
             <li><a href="">Love Forever</a></li>
           </ul>
         </p>
-       
+
       </div>
       <button type="submit">
         <i class="fas fa-search"></i>
@@ -57,7 +57,7 @@
       </ul>
     </div>
     <i class="fas fa-bars" onclick="showMenu()"></i>
-      
+
     <div class="right">
       <i class="fab fa-facebook"></i>
     </div>
@@ -66,7 +66,7 @@
 
 
  <!-- ======================== Banner ========================= -->
- 
+
  <section class="banner_part">
   <div class="container">
     <div class="banner_slider">
@@ -105,21 +105,21 @@
         <input type="text" name="code" placeholder="৮ ডিজিটের কোড লিখুন" required /> <br><br>
         <button type="submit" class="submit">যাচাই করুন</button>
     </form>
- 
+
   <!-- ============= -->
 
   <p id="demo" style="color:red;font-weight: 600;">বিঃ দ্রঃ কোডটি শুধু মাত্র একবারই ব্যবহার করতে পারবেন,<br>
     কোডটি পূর্বে ব্যবহৃত হয়ে গেলে তা মেয়াদ উত্তীর্ণ দেখাবে।
-     
+
   </p>
   <img src="" alt="">
   </div>
- 
+
 </section>
 
     <!-- ========== -->
 
- 
+
 
  <!-- ======================== Our Product ========================= -->
 
@@ -137,7 +137,7 @@
         <p class="natok">কোনো পার্শ্বপ্রতিক্রিয়া নাই। এটি (BCSIR) ল্যাব থেকে পরিক্ষিত এবং অনুমোদিত।</p>
 
       </div>
-    
+
     <div class="p">
       <img src="./img/product2.jpg" alt="">
       <h6>Natural Food Badam Shake
@@ -173,7 +173,7 @@
 
     </div>
 
-    
+
     <div class="product">
 
       <div class="p">
@@ -187,7 +187,7 @@
         <p class="natok">কোনো পার্শ্বপ্রতিক্রিয়া নাই। এটি (BCSIR) ল্যাব থেকে পরিক্ষিত এবং অনুমোদিত।</p>
 
       </div>
-    
+
     <div class="p">
       <img src="./img/product.png" alt="">
       <h6>Keto Green Coffee</h6>
@@ -202,7 +202,7 @@
       <p>Supplement</p>
       <p class="holud">1200 ৳</p>
       <p class="natok">কোনো পার্শ্বপ্রতিক্রিয়া নাই। এটি (BCSIR) ল্যাব থেকে পরিক্ষিত এবং অনুমোদিত।</p>
-       
+
 
     </div>
     <div class="p">
@@ -211,13 +211,13 @@
       <p>Supplement</p>
       <p class="holud">1400 ৳</p>
       <p class="natok">কোনো পার্শ্বপ্রতিক্রিয়া নাই। এটি (BCSIR) ল্যাব থেকে পরিক্ষিত এবং অনুমোদিত।</p>
-       
-
-    </div>
 
 
     </div>
-    
+
+
+    </div>
+
     <div class="product">
 
       <div class="p">
@@ -228,7 +228,7 @@
         <p class="natok">কোনো পার্শ্বপ্রতিক্রিয়া নাই। এটি (BCSIR) ল্যাব থেকে পরিক্ষিত এবং অনুমোদিত।</p>
 
       </div>
-    
+
     <div class="p">
       <img src="./img/p10.jpeg" alt="">
       <h6>Hight Develop Supplement</h6>
@@ -254,13 +254,13 @@
       <p>Supplement</p>
       <p class="holud">1000 ৳</p>
       <p class="natok">কোনো পার্শ্বপ্রতিক্রিয়া নাই। এটি (BCSIR) ল্যাব থেকে পরিক্ষিত এবং অনুমোদিত।</p>
-       
-
-    </div>
 
 
     </div>
-     
+
+
+    </div>
+
      <div class="product">
 
       <div class="p">
@@ -271,7 +271,7 @@
         <p class="natok">কোনো পার্শ্বপ্রতিক্রিয়া নাই। এটি (BCSIR) ল্যাব থেকে পরিক্ষিত এবং অনুমোদিত।</p>
 
       </div>
-    
+
     <div class="p">
       <img src="./img/p14.jpg" alt="">
       <h6>Piles Cure</h6>
@@ -286,7 +286,7 @@
       <p>Supplement</p>
       <p class="holud">1,990 ৳</p>
       <p class="natok">কোনো পার্শ্বপ্রতিক্রিয়া নাই। এটি (BCSIR) ল্যাব থেকে পরিক্ষিত এবং অনুমোদিত।</p>
-       
+
 
     </div>
     <div class="p">
@@ -295,13 +295,13 @@
       <p>Supplement</p>
       <p class="holud">1,990.00 ৳</p>
       <p class="natok">কোনো পার্শ্বপ্রতিক্রিয়া নাই। এটি (BCSIR) ল্যাব থেকে পরিক্ষিত এবং অনুমোদিত।</p>
-       
-
-    </div>
 
 
     </div>
-   
+
+
+    </div>
+
      <div class="product">
 
       <div class="p">
@@ -312,7 +312,7 @@
         <p class="natok">কোনো পার্শ্বপ্রতিক্রিয়া নাই। এটি (BCSIR) ল্যাব থেকে পরিক্ষিত এবং অনুমোদিত।</p>
 
       </div>
-    
+
     <div class="p">
       <img src="./img/p18.jpeg" alt="">
       <h6>Weight Gain</h6>
@@ -330,7 +330,7 @@
       <p>Supplement</p>
       <p class="holud">1,990 ৳</p>
       <p class="natok">কোনো পার্শ্বপ্রতিক্রিয়া নাই। এটি (BCSIR) ল্যাব থেকে পরিক্ষিত এবং অনুমোদিত।</p>
-       
+
 
     </div>
     <div class="p">
@@ -339,14 +339,14 @@
       <p>Supplement</p>
       <p class="holud">1,990.00 ৳</p>
       <p class="natok">কোনো পার্শ্বপ্রতিক্রিয়া নাই। এটি (BCSIR) ল্যাব থেকে পরিক্ষিত এবং অনুমোদিত।</p>
-       
-
-    </div>
 
 
     </div>
 
-    
+
+    </div>
+
+
     <div class="product">
 
       <div class="p">
@@ -357,7 +357,7 @@
         <p class="natok">কোনো পার্শ্বপ্রতিক্রিয়া নাই। এটি (BCSIR) ল্যাব থেকে পরিক্ষিত এবং অনুমোদিত।</p>
 
       </div>
-    
+
     <div class="p">
       <img src="./img/p22.jpg" alt="">
       <h6>Weight Loss (Get Slim Stay Slim)</h6>
@@ -372,7 +372,7 @@
       <p>Supplement</p>
       <p class="holud">1,990 ৳</p>
       <p class="natok">কোনো পার্শ্বপ্রতিক্রিয়া নাই। এটি (BCSIR) ল্যাব থেকে পরিক্ষিত এবং অনুমোদিত।</p>
-       
+
 
     </div>
     <div class="p">
@@ -390,7 +390,7 @@
 
     </div>
 
-   
+
      <div class="product">
 
       <div class="p">
@@ -401,7 +401,7 @@
         <p class="natok">কোনো পার্শ্বপ্রতিক্রিয়া নাই। এটি (BCSIR) ল্যাব থেকে পরিক্ষিত এবং অনুমোদিত।</p>
 
       </div>
-    
+
     <div class="p">
       <img src="./img/p26.jpg" alt="">
       <h6>Women’s V Tight</h6>
@@ -437,11 +437,11 @@
     </div>
   </div>
   <hr>
- </section>  
- 
-      
-     
-     
+ </section>
+
+
+
+
  <!-- ======================== Buy ========================= -->
 
  <section class="buy">
@@ -483,9 +483,7 @@
 <section class="about_part" id="about">
   <div class="container">
     <h3>About Us</h3>
-    <p>We are your one-stop destination for all your health and beauty needs. Discover a wide range of high-quality products carefully curated to enhance your well-being and radiance. From nourishing skincare essentials to wellness supplements, our website offers a diverse selection designed to help you look and feel your best.
-
-      With our user-friendly interface and secure shopping experience, you can explore, compare, and conveniently purchase your favorite health and beauty products from the comfort of your home. Embrace self-care and unleash your inner beauty with Elitecorporationbd.</p>
+    <p>We are your one-stop destination for all your health needs. Discover a wide range of high-quality supplements carefully curated to enhance your well-being. Our website offers a diverse selection designed to help you feel your best. With our user-friendly interface and secure shopping experience, you can explore, compare, and conveniently purchase your favorite health supplements from the comfort of your home. Embrace self-care and unlock better health with Elitecorporation.top.</p>
   </div>
 </section>
 
@@ -523,19 +521,19 @@
           <li><a href="">
             <i class="fab fa-facebook"></i>
           </a></li>
-           
+
         </ul>
       </div>
     </div>
   </div>
-  
+
   <p class="footer_p">
     Elitcorporationbd  2023 CREATED BY Systemeye Technologies Ltd. PREMIUM DIGITAL MARKETING SOLUTIONS.
   </p>
 
-     
+
  </footer>
-    
+
 
     <!-- =========================== Script =========================== -->
     <script src="js/jquery-1.12.4.min.js"></script>
