--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <title>Elite Corporation</title>
+    <!-- Favicon code -->
+    <link rel="icon" href="../public/img/favicon (1).ico" type="image/x-icon">
 </head>
 <body>
  <!-- ==================== Header ========================= -->
@@ -442,7 +444,7 @@
 
 
 
- <!-- ======================== Buy ========================= -->
+ <!-- ======================== Buy =========================
 
  <section class="buy">
   <div class="container">
@@ -476,7 +478,7 @@
 
     </div>
   </div>
- </section>
+ </section> -->
 
   <!-- ======================= About ========================= -->
 
