--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/responsive.css">
     <title>Elite Corporation</title>
     <!-- Favicon code -->
-    <link rel="icon" href="../public/img/favicon (1).ico" type="image/x-icon">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 <body>
  <!-- ==================== Header ========================= -->
