--- a/views/index.ejs
+++ b/views/index.ejs
@@ -199,8 +199,8 @@
 
     </div>
     <div class="p">
-      <img src="./img/product7.jpg" alt="">
-      <h6>Healthy Plus</h6>
+      <img src="./img/product0.jpg" alt="">
+      <h6>Natural Health Supplements</h6>
       <p>Supplement</p>
       <p class="holud">1200 ৳</p>
       <p class="natok">কোনো পার্শ্বপ্রতিক্রিয়া নাই। এটি (BCSIR) ল্যাব থেকে পরিক্ষিত এবং অনুমোদিত।</p>
