--- a/views/index.ejs
+++ b/views/index.ejs
@@ -179,7 +179,7 @@
     <div class="product">
 
       <div class="p">
-        <img src="./img/product0.jpg" alt="">
+        <img src="./img/product0.jpeg" alt="">
         <h6>Natural Health Supplements</h6>
         <p>Supplement</p>
         <p class="holud">1200 ৳</p>
