--- a/views/index.ejs
+++ b/views/index.ejs
@@ -261,8 +261,8 @@
     <div class="product">
 
       <div class="p">
-        <img src="./img/product5.jpg" alt="">
-        <h6>Vita Protein</h6>
+        <img src="./img/product0.jpeg" alt="">
+        <h6>Natural Health Supplements</h6>
         <p>Supplement</p>
         <p class="holud">1200 ৳</p>
         <div class="discount">
@@ -282,7 +282,7 @@
     </div>
     <div class="p">
       <img src="./img/product0.jpg" alt="">
-      <h6>Natural Health Supplements</h6>
+      <h6>Vita Protein</h6>
       <p>Supplement</p>
       <p class="holud">1200 ৳</p>
       <p class="natok">কোনো পার্শ্বপ্রতিক্রিয়া নাই। এটি (BCSIR) ল্যাব থেকে পরিক্ষিত এবং অনুমোদিত।</p>
